@@ -83,6 +83,9 @@ PHP 8.3 UPGRADE NOTES
     declarations. RFC: https://wiki.php.net/rfc/typed_class_constants
   . Closures created from magic methods can now accept named arguments.
   . The final modifier may now be used when using a method from a trait.
+  . Added the #[\Override] attribute to check that a method exists
+    in a parent class or implemented interface.
+    RFC: https://wiki.php.net/rfc/marking_overriden_methods
 
 - Posix
   . posix_getrlimit() now takes an optional $res parameter to allow fetching a
