@@ -29,6 +29,7 @@ ZEND_API zend_class_entry *zend_ce_return_type_will_change_attribute;
 ZEND_API zend_class_entry *zend_ce_allow_dynamic_properties;
 ZEND_API zend_class_entry *zend_ce_sensitive_parameter;
 ZEND_API zend_class_entry *zend_ce_sensitive_parameter_value;
+ZEND_API zend_class_entry *zend_ce_override;
 
 static zend_object_handlers attributes_object_handlers_sensitive_parameter_value;
 
@@ -134,6 +135,11 @@ ZEND_METHOD(SensitiveParameterValue, __debugInfo)
 static HashTable *attributes_sensitive_parameter_value_get_properties_for(zend_object *zobj, zend_prop_purpose purpose)
 {
 	return NULL;
+}
+
+ZEND_METHOD(Override, __construct)
+{
+	ZEND_PARSE_PARAMETERS_NONE();
 }
 
 static zend_attribute *get_attribute(HashTable *attributes, zend_string *lcname, uint32_t offset)
@@ -371,6 +377,9 @@ void zend_register_attribute_ce(void)
 	/* This is not an actual attribute, thus the zend_mark_internal_attribute() call is missing. */
 	zend_ce_sensitive_parameter_value = register_class_SensitiveParameterValue();
 	zend_ce_sensitive_parameter_value->default_object_handlers = &attributes_object_handlers_sensitive_parameter_value;
+
+	zend_ce_override = register_class_Override();
+	zend_mark_internal_attribute(zend_ce_override);
 }
 
 void zend_attributes_shutdown(void)
