@@ -43,6 +43,7 @@ extern ZEND_API zend_class_entry *zend_ce_attribute;
 extern ZEND_API zend_class_entry *zend_ce_allow_dynamic_properties;
 extern ZEND_API zend_class_entry *zend_ce_sensitive_parameter;
 extern ZEND_API zend_class_entry *zend_ce_sensitive_parameter_value;
+extern ZEND_API zend_class_entry *zend_ce_override;
 
 typedef struct {
 	zend_string *name;
