@@ -86,3 +86,12 @@ final class SensitiveParameterValue
 
     public function __debugInfo(): array {}
 }
+
+/**
+ * @strict-properties
+ */
+#[Attribute(Attribute::TARGET_METHOD)]
+final class Override
+{
+    public function __construct() {}
+}
